added general page

--- a/src/main/resources/com/fitness/menu.fxml
+++ b/src/main/resources/com/fitness/menu.fxml
@@ -37,6 +37,27 @@
          </VBox.margin>
       </Label>
       <VBox alignment="TOP_CENTER" VBox.vgrow="ALWAYS">
+         <Button fx:id="generalButton" maxWidth="200.0" minWidth="200.0" mnemonicParsing="false" prefWidth="200.0">
+            <graphic>
+               <HBox prefWidth="200.0">
+                  <children>
+                     <ImageView disable="true" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
+                        <cursor>
+                           <Cursor fx:constant="DEFAULT" />
+                        </cursor>
+                        <image>
+                           <Image url="@assets/home.png" />
+                        </image>
+                     </ImageView>
+                     <Label styleClass="menu_label" text="Գլխավոր" />
+                  </children>
+               </HBox>
+            </graphic>
+            <styleClass>
+               <String fx:value="menu_button" />
+               <String fx:value="menu_item" />
+            </styleClass>
+         </Button>
          <Button fx:id="enterButton" maxWidth="200.0" minWidth="200.0" mnemonicParsing="false" prefWidth="200.0" VBox.vgrow="ALWAYS">
             <graphic>
                <HBox alignment="CENTER">
